[package]
name = "pdf-swissarmyknife"
version = "0.1.0"
edition = "2021"
authors = ["Erik Valkering <erikvalkering@gmail.com>"]
description = "Collection of tools for processing of pdf files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
itertools = "0.11.0"
lopdf = "0.31.0"
